# End-to-end-olist-project

./: .gitignore  README.md  dbt_project.yml  docker-compose.old.yaml  docker-compose.yaml  input.json  main.py  profiles.yml  pyproject.toml
airflow/: Dockerfile
dags/: pipeline_trigger_and_training_dag.py  prod_models_deployment_dag.py
dbt_databrick/: .user.yml  dbt_project.yml  profiles.yml
dbt_databrick/models/marts/: source.yml
dbt_databrick/models/marts/Logistics/: logistics_freight_cost_analysis.sql  logistics_order_processing_time.sql
dbt_databrick/models/marts/Sales/: distributed_state_revenue.sql  top10_sellers_each_year.sql
initdb/: init-multiple-db.sql
k8s-configs/olist-model-deployment/: Chart.yaml  values.yaml
k8s-configs/olist-model-deployment/templates/: NOTES.txt  _helpers.tpl  inferenceservice.yaml  serviceaccount.yaml
k8s-configs/olist-model-deployment/templates/tests/: test-connection.yaml
ml/: churn_pred_models.py  churn_pred_multi_models.py  colaborative_filtering.py  content_based_filtering.py  requirements.txt  summarization.ipynb  tes.ipynb  test.ipynb  test.py  testDocker.py  ultils.py
ml/.devcontainer/: devcontainer.json
models/marts/Marketing/: mkt_customer_segmentation_by_geo.sql  mkt_peak_purchase_times_analysis.sql
models/marts/Sales/: payment_type_ratio.sql  properties.yml  revenue_by_month.sql
